--- a/tarea2/website_entrenamos.uy/src/main/webapp/WEB-INF/web.xml
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/WEB-INF/web.xml
@@ -9,4 +9,25 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  <servlet>
+	<servlet-name>LoginController</servlet-name>
+	<servlet-class>controladores.LoginController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+	<servlet-name>LoginController</servlet-name>
+	<url-pattern>/LoginController</url-pattern>
+  </servlet-mapping>
+  <servlet>
+	<servlet-name>TestController</servlet-name>
+	<servlet-class>controladores.TestController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+	<servlet-name>TestController</servlet-name>
+	<url-pattern>/TestController</url-pattern>
+  </servlet-mapping>
+  <session-config>
+	<session-timeout>
+		30
+	</session-timeout>
+  </session-config>
 </web-app>
