--- a/tarea2/website_entrenamos.uy/src/main/webapp/WEB-INF/web.xml
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/WEB-INF/web.xml
@@ -3,27 +3,22 @@
   <display-name>website_entrenamos.uy</display-name>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
   <servlet>
-	<servlet-name>LoginController</servlet-name>
-	<servlet-class>controladores.LoginController</servlet-class>
+	<servlet-name>Login</servlet-name>
+	<servlet-class>controladores.Login</servlet-class>
   </servlet>
   <servlet-mapping>
-	<servlet-name>LoginController</servlet-name>
-	<url-pattern>/LoginController</url-pattern>
+	<servlet-name>Login</servlet-name>
+	<url-pattern>/login</url-pattern>
   </servlet-mapping>
-  <servlet>
-	<servlet-name>TestController</servlet-name>
-	<servlet-class>controladores.TestController</servlet-class>
+    <servlet>
+	<servlet-name>Home</servlet-name>
+	<servlet-class>controladores.Home</servlet-class>
   </servlet>
   <servlet-mapping>
-	<servlet-name>TestController</servlet-name>
-	<url-pattern>/TestController</url-pattern>
+	<servlet-name>Home</servlet-name>
+	<url-pattern>/home</url-pattern>
   </servlet-mapping>
   <session-config>
 	<session-timeout>
