--- a/tarea2/website_entrenamos.uy/src/main/webapp/WEB-INF/web.xml
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/WEB-INF/web.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+	xmlns="http://xmlns.jcp.org/xml/ns/javaee" 
+	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
 	id="WebApp_ID" version="4.0">
 	<display-name>website_entrenamos.uy</display-name>
 	<welcome-file-list>
@@ -45,13 +47,21 @@
 		<servlet-name>ConsultaActividad</servlet-name>
 		<url-pattern>/consultaActividad</url-pattern>
 	</servlet-mapping>
-		<servlet>
+	<servlet>
 		<servlet-name>ConsultaInstitucion</servlet-name>
 		<servlet-class>controladores.ConsultaInstitucion</servlet-class>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>ConsultaInstitucion</servlet-name>
 		<url-pattern>/consultaInstitucion</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>ConsultaCategoria</servlet-name>
+		<servlet-class>controladores.ConsultaCategoria</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>ConsultaCategoria</servlet-name>
+		<url-pattern>/consultaCategoria</url-pattern>
 	</servlet-mapping>
 	<session-config>
 		<session-timeout>30</session-timeout>
