muchos cambios poco avance

--- a/tarea2/website_entrenamos.uy/src/main/webapp/WEB-INF/web.xml
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/WEB-INF/web.xml
@@ -104,7 +104,7 @@
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>ConsultaUsuario</servlet-name>
-		<url-pattern>/ConsultaUsuario</url-pattern>
+		<url-pattern>/consultaUsuario</url-pattern>
 	</servlet-mapping>
 	
 	
