funcionalid deguir dejar de seguir

--- a/tarea2/website_entrenamos.uy/src/main/webapp/WEB-INF/web.xml
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/WEB-INF/web.xml
@@ -107,6 +107,15 @@
 		<url-pattern>/consultaUsuario</url-pattern>
 	</servlet-mapping>
 	
+	<servlet>
+		<servlet-name>SeguirDejarDeSeguir</servlet-name>
+		<servlet-class>controladores.SeguirDejarDeSeguir</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>SeguirDejarDeSeguir</servlet-name>
+		<url-pattern>/seguirDejarDeSeguir</url-pattern>
+	</servlet-mapping>
+	
 	
 	
 	<session-config>
