--- a/tarea2/website_entrenamos.uy/src/main/webapp/WEB-INF/web.xml
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/WEB-INF/web.xml
@@ -114,4 +114,14 @@
 	<session-config>
 		<session-timeout>30</session-timeout>
 	</session-config>
+	<error-page>
+    	<!-- Uncaught exception -->
+    	<error-code>500</error-code>
+    	<location>/WEB-INF/errorpages/500.jsp</location>
+	</error-page>
+	<error-page>
+    	<!-- Missing resource -->
+    	<error-code>404</error-code>
+    	<location>/WEB-INF/errorpages/404.jsp</location>
+	</error-page>
 </web-app>
