--- a/tarea2/website_entrenamos.uy/src/main/webapp/WEB-INF/web.xml
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/WEB-INF/web.xml
@@ -152,7 +152,10 @@
 		<servlet-name>ComprarCuponera</servlet-name>
 		<servlet-class>controladores.ComprarCuponera</servlet-class>
 	</servlet>
-	
+	<servlet-mapping>
+		<servlet-name>ComprarCuponera</servlet-name>
+		<url-pattern>/comprarcuponera</url-pattern>
+	</servlet-mapping>
 
 	<session-config>
 		<session-timeout>30</session-timeout>
