--- a/tarea2/website_entrenamos.uy/.classpath
+++ b/tarea2/website_entrenamos.uy/.classpath
@@ -9,6 +9,6 @@
 	<classpathentry exported="true" kind="lib" path="src/main/webapp/WEB-INF/lib/servidor_central.jar" sourcepath="/server_entrenamos.uy/src/logica"/>
 	<classpathentry exported="true" kind="lib" path="src/main/webapp/WEB-INF/lib/commons-io-2.11.0.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/jstl-1.2.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/nuevoServerEn80"/>
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/apache-tomcat-9.0.46"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
