mejoro sitio movil y saco carpeta imagenes de ambos sitios

--- a/tarea2/websitemovil_entrenamos.uy/src/main/webapp/WEB-INF/web.xml
+++ b/tarea2/websitemovil_entrenamos.uy/src/main/webapp/WEB-INF/web.xml
@@ -39,6 +39,14 @@
 		<url-pattern>/consultaActividad</url-pattern>
 	</servlet-mapping>
 	<servlet>
+		<servlet-name>ListarActividades</servlet-name>
+		<servlet-class>controladores.ListarActividades</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>ListarActividades</servlet-name>
+		<url-pattern>/listarActividades</url-pattern>
+	</servlet-mapping>
+	<servlet>
 		<servlet-name>ConsultaInstitucion</servlet-name>
 		<servlet-class>controladores.ConsultaInstitucion</servlet-class>
 	</servlet>
