se listan clases en movil

--- a/tarea2/websitemovil_entrenamos.uy/src/main/webapp/WEB-INF/web.xml
+++ b/tarea2/websitemovil_entrenamos.uy/src/main/webapp/WEB-INF/web.xml
@@ -47,6 +47,14 @@
 		<url-pattern>/listarActividades</url-pattern>
 	</servlet-mapping>
 	<servlet>
+		<servlet-name>ListarClases</servlet-name>
+		<servlet-class>controladores.ListarClases</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>ListarClases</servlet-name>
+		<url-pattern>/listarClases</url-pattern>
+	</servlet-mapping>
+	<servlet>
 		<servlet-name>ConsultaInstitucion</servlet-name>
 		<servlet-class>controladores.ConsultaInstitucion</servlet-class>
 	</servlet>
