--- a/tarea2/website_entrenamos.uy/pom.xml
+++ b/tarea2/website_entrenamos.uy/pom.xml
@@ -2,9 +2,17 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>website_entrenamos.uy</groupId>
   <artifactId>website_entrenamos.uy</artifactId>
+  <name>WebSite</name>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
+  <url>http://maven.apache.org</url>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>    
+  </properties>
   <build>
+  
+  
+  
     <resources>
       <resource>
         <directory>src/main/java</directory>
@@ -61,6 +69,20 @@
 	    <version>4.0.0</version>
 	    <scope>provided</scope>
 	</dependency>
+	
+	<dependency>
+	    <groupId>commons-io</groupId>
+	    <artifactId>commons-io</artifactId>
+	    <version>2.11.0</version>
+	</dependency>
+	
+	<dependency>
+	    <groupId>com.itextpdf</groupId>
+	    <artifactId>itextpdf</artifactId>
+	    <version>5.5.13.2</version>
+	</dependency>
+	
+	
 
   </dependencies>
 </project>
