--- a/tarea2/website_entrenamos.uy/pom.xml
+++ b/tarea2/website_entrenamos.uy/pom.xml
@@ -1,12 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>website_entrenamos.uy</groupId>
+  <groupId>src</groupId>
   <artifactId>website_entrenamos.uy</artifactId>
   <name>WebSite</name>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
   <url>http://maven.apache.org</url>
   <properties>
+  	<failOnMissingWebXml>true</failOnMissingWebXml>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>    
   </properties>
   <build>
