--- a/tarea2/WorkStation/conf.properties
+++ b/tarea2/WorkStation/conf.properties
@@ -1,6 +1,23 @@
 urlADeportivas=http://localhost:9128/CtrlActDeportivas
 urlCategorias=http://localhost:9129/ctrlCategorias
-urlClases=http://localhost:9177/CtrlCACAAAAA
+urlClases=http://localhost:9128/CtrlClases
 urlUsuario=http://localhost:9128/ControladorUsuario
 urlCuponeras=http://localhost:9128/CtrlCuponeras
 urlIDeportivas=http://localhost:9129/ctrlInstituciones
+
+
+
+urlADeportivasWeb=http://localhost:9128/CtrlActDeportivas
+urlCategoriasWeb=http://localhost:9129/ctrlCategorias
+urlClasesWeb=http://localhost:9128/CtrlClases
+urlUsuarioWeb=http://localhost:9128/ControladorUsuario
+urlCuponerasWeb=http://localhost:9128/CtrlCuponeras
+urlIDeportivasWeb=http://localhost:9129/ctrlInstituciones
+
+
+urlADeportivasWorkStation=http://localhost:9128/CtrlActDeportivas
+urlCategoriasWorkStation=http://localhost:9129/ctrlCategorias
+urlClasesWorkStation=http://localhost:9128/CtrlClases
+urlUsuarioWorkStation=http://localhost:9128/ControladorUsuario
+urlCuponerasWorkStation=http://localhost:9128/CtrlCuponeras
+urlIDeportivasWorkStation=http://localhost:9129/ctrlInstituciones
