--- a/tarea3/websitemovil_entrenamos.uy/pom.xml
+++ b/tarea3/websitemovil_entrenamos.uy/pom.xml
@@ -4,7 +4,7 @@
   <artifactId>websitemovil_entrenamos.uy</artifactId>
   <name>WebSite</name>
   <packaging>war</packaging>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>1.0</version>
   <url>http://maven.apache.org</url>
   <properties>
   	<failOnMissingWebXml>true</failOnMissingWebXml>
