--- a/tarea3/WorkStation/pom.xml
+++ b/tarea3/WorkStation/pom.xml
@@ -69,7 +69,30 @@
           </execution>
         </executions>
       </plugin>
-      
+
+<plugin>
+<groupId>org.apache.maven.plugins</groupId>
+<artifactId>maven-resources-plugin</artifactId>
+<version>3.2.0</version>
+<executions>
+<execution>
+<id>copy-resources</id>
+<phase>package</phase>
+<goals>
+<goal>copy-resources</goal>
+</goals>
+<configuration>
+<outputDirectory>${project.build.directory}/.files/</outputDirectory>
+<resources>
+<resource>
+<directory>${project.basedir}/.files/</directory>
+<filtering>true</filtering>
+</resource>
+</resources>
+</configuration>
+</execution>
+</executions>
+</plugin>
     
     </plugins>
   </build>
